[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/autoload/GlobalSfx.gd" type="Script" id=1]
[ext_resource path="res://resources/sfx/A_don_amancio_8bits.WAV" type="AudioStream" id=2]
[ext_resource path="res://resources/sfx/amor_salvaje_8bits.WAV" type="AudioStream" id=3]
[ext_resource path="res://resources/sfx/ley_y_trampa_8bits.WAV" type="AudioStream" id=4]
[ext_resource path="res://resources/sfx/soledad_a_don_ata_8bits.WAV" type="AudioStream" id=5]
[ext_resource path="res://resources/sfx/A_don_amancio_8bits_lowpass.wav" type="AudioStream" id=6]
[ext_resource path="res://resources/sfx/song_CricketsCicadas.wav" type="AudioStream" id=7]

[node name="GlobalSfx" type="Node"]
script = ExtResource( 1 )

[node name="MainMenu" type="Node" parent="."]

[node name="MenuOst" type="AudioStreamPlayer" parent="MainMenu"]
stream = ExtResource( 6 )
autoplay = true
bus = "Music"

[node name="MenuOst2" type="AudioStreamPlayer" parent="MainMenu"]
stream = ExtResource( 7 )
volume_db = -9.0
autoplay = true
bus = "Music"

[node name="OstSong1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Music"

[node name="OstSong2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"

[node name="OstSong3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Music"

[node name="OstSong4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Music"

[connection signal="finished" from="MainMenu/MenuOst" to="." method="_on_OstSong4_finished"]
[connection signal="finished" from="MainMenu/MenuOst2" to="." method="_on_OstSong4_finished"]
[connection signal="finished" from="OstSong1" to="." method="_on_OstSong1_finished"]
[connection signal="finished" from="OstSong2" to="." method="_on_OstSong2_finished"]
[connection signal="finished" from="OstSong3" to="." method="_on_OstSong3_finished"]
[connection signal="finished" from="OstSong4" to="." method="_on_OstSong4_finished"]
